src/test/deca/syntax/invalid/test_lexer_inclusion_de_fichier_inexistant.deca
// Test: Inclusion of a dummy file

#include "test.decah"
